// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangesetNode renders a changesetplan with publishing disabled 1`] = `
Object {
  "children": <div
    className="changeset-node__content changeset-node__content--no-collapse flex-fill"
  >
    <div
      className="d-flex align-items-center m-1"
    >
      <div
        className="flex-shrink-0 flex-grow-0 my-1 mr-1"
      >
        <SourcePullIcon
          className="text-success"
          data-tooltip="open"
        />
      </div>
      <div
        className="changeset-node__content flex-fill"
      >
        <h3
          className="m-0"
        >
          <AnchorLink
            className="text-muted"
            rel="noopener noreferrer"
            target="_blank"
            to="github.com/sourcegraph/sourcegraph"
          >
            sourcegraph
          </AnchorLink>
           
          <span
            className="mx-1"
          />
           
        </h3>
      </div>
      <span
        className="flex-shrink-0 flex-grow-0"
      >
        <DiffStat
          added={100}
          changed={200}
          deleted={100}
          expandedCounts={true}
        />
      </span>
    </div>
  </div>,
  "className": "list-group-item e2e-changeset-node",
}
`;

exports[`ChangesetNode renders a changesetplan with publishing enabled 1`] = `
Object {
  "children": <div
    className="changeset-node__content changeset-node__content--no-collapse flex-fill"
  >
    <div
      className="d-flex align-items-center m-1"
    >
      <div
        className="flex-shrink-0 flex-grow-0 my-1 mr-1"
      >
        <SourcePullIcon
          className="text-success"
          data-tooltip="open"
        />
      </div>
      <div
        className="changeset-node__content flex-fill"
      >
        <h3
          className="m-0"
        >
          <AnchorLink
            className="text-muted"
            rel="noopener noreferrer"
            target="_blank"
            to="github.com/sourcegraph/sourcegraph"
          >
            sourcegraph
          </AnchorLink>
           
          <span
            className="badge badge-light"
          >
            Draft
          </span>
          <span
            className="mx-1"
          />
           
        </h3>
      </div>
      <span
        className="flex-shrink-0 flex-grow-0"
      >
        <DiffStat
          added={100}
          changed={200}
          deleted={100}
          expandedCounts={true}
        />
      </span>
      <React.Fragment>
        <button
          className="flex-shrink-0 flex-grow-0 btn btn-sm btn-secondary ml-2"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
           Publish
        </button>
      </React.Fragment>
    </div>
  </div>,
  "className": "list-group-item e2e-changeset-node",
}
`;

exports[`ChangesetNode renders an externalchangeset 1`] = `
Object {
  "children": <Collapsible
    title={
      <div
        className="d-flex align-items-center m-1"
      >
        <div
          className="flex-shrink-0 flex-grow-0 my-1 mr-1"
        >
          <SourcePullIcon
            className="text-success"
            data-tooltip="open"
          />
        </div>
        <div
          className="flex-shrink-0 flex-grow-0 ml-1 mr-3"
        >
          <AccountQuestionIcon
            className="text-warning"
            data-tooltip="pending review"
          />
        </div>
        <div
          className="changeset-node__content flex-fill"
        >
          <h3
            className="m-0"
          >
            <AnchorLink
              className="text-muted"
              rel="noopener noreferrer"
              target="_blank"
              to="github.com/sourcegraph/sourcegraph"
            >
              sourcegraph
            </AnchorLink>
             
            <span
              className="mx-1"
            />
             
            <React.Fragment>
              <LinkOrSpan
                rel="noopener noreferrer"
                target="_blank"
                to="https://github.com/sourcegraph/sourcegraph/pull/111111"
              >
                Remove lodash
              </LinkOrSpan>
              <span
                className="ml-2"
              >
                <ChangesetLabel
                  label={
                    Object {
                      "__typename": "ChangesetLabel",
                      "color": "93ba13",
                      "description": "Something is broken",
                      "text": "bug",
                    }
                  }
                />
              </span>
            </React.Fragment>
          </h3>
          <Markdown
            className="text-truncate"
            dangerousInnerHTML="We should remove lodash
"
          />
        </div>
        <span
          className="flex-shrink-0 flex-grow-0"
        >
          <DiffStat
            added={100}
            changed={200}
            deleted={100}
            expandedCounts={true}
          />
        </span>
      </div>
    }
    titleClassName="changeset-node__content flex-fill"
    wholeTitleClickable={false}
  >
    <FileDiffNode
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": undefined,
              "pathname": "/",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": undefined,
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      isLightTheme={true}
      lineNumbers={true}
      location={
        Object {
          "hash": "",
          "key": undefined,
          "pathname": "/campaigns",
          "search": "",
          "state": undefined,
        }
      }
      node={
        Object {
          "__typename": "FileDiff",
        }
      }
      persistLines={true}
    />
  </Collapsible>,
  "className": "list-group-item e2e-changeset-node",
}
`;
